# mmq_npu

./: .gitignore  CMakeLists.txt  setup.py
csrc/: acl_system_info.cpp  acl_system_info.h  add_cpu.cpp  add_cpu.h  add_kernel.cpp  add_tiling.h  pybind.cpp  utils.h
tests/: test_add.py
